# xbanan

./: .clangd  .gitmodules  0001-linux-window-server-sdl2.patch  CMakeLists.txt  LICENSE  README.md  foobar.py  qwerty.keymap  us.keymap
BAN/: CMakeLists.txt
BAN/include/BAN/: Bitset.h  Debug.h  New.h  String.h  StringView.h  Variant.h
LibClipboard/: CMakeLists.txt
LibDEFLATE/: CMakeLists.txt  Compressor.cpp  Decompressor.cpp
LibFont/: CMakeLists.txt  Font.cpp  TTF.cpp
LibGUI/: CMakeLists.txt  Window.cpp
LibGUI/include/LibGUI/: Packet.h  Texture.h
LibImage/: CMakeLists.txt
LibInput/: CMakeLists.txt  KeyboardLayout.cpp
LibInput/include/LibInput/: MouseEvent.h
ProgramLauncher/: CMakeLists.txt  main.cpp
Terminal/: CMakeLists.txt  Terminal.cpp
WindowServer/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  Window.cpp  WindowServer.cpp  WindowServer.h  main.cpp
xbanan/: Base.cpp  Base.h  CMakeLists.txt  Definitions.h  Drawing.cpp  Drawing.h  Events.cpp  Events.h  ExtBigReg.cpp  ExtGLX.cpp  ExtRANDR.cpp  ExtRANDR.h  ExtSHM.cpp  ExtXRes.cpp  Extensions.cpp  Extensions.h  Font.cpp  Font.h  Image.cpp  Image.h  Keymap.cpp  Keymap.h  Platform.h  SafeGetters.cpp  SafeGetters.h  Types.h  Utils.h  main.cpp
xbanan/SDL2/: sdl2.cpp
xbanan/SDL3/: sdl3.cpp
xbanan/banan-os/: banan-os.cpp
